# rust-draw

./: Cargo.toml  Carpet Calculations.xlsx
benches/: carpet_benchmark.rs
src/: animation_test.rs  animator.rs  barnsley_fern_animated.rs  barnsley_fern_raster.rs  carpet.rs  carpet_1.rs  cave_cell.rs  cell_auto.rs  color.rs  geometry.rs  grid.rs  image_util.rs  lib.rs  main.rs  renderer.rs  renderer_1.rs  renderer_2.rs  renderer_3.rs  shape.rs  try_fractal.rs  try_renderer.rs  try_transition.rs
src/algorithms/: generic_percolation.rs  generic_union.rs  group_color.rs  mod.rs  percolate_anim.rs  percolation.rs  union_find.rs  union_find_parallel.rs
src/carpet/: carpet.rs  carpet_2.rs  mod.rs
src/voronoi/: fortune_anim.rs  mod.rs  parabola.rs
