[package]
name = "draw"
version = "0.1.0"
authors = ["David Thureson <David.G.Thureson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../../utility/util" }
piston = "0.52.0"
piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.68.0"
piston2d-opengl_graphics = "0.77.0"
euclid = "0.22.1"
rand = "0.8.3"
raster = "0.2.0"
itertools = "0.10.0"
# serde = { version = "1.0.125", features = ["derive"] }
# serde_json = "1.0.64"
num = "0.4.0"
#piston_window = "0.120.0"
#find_folder = "0.3.0"

[dev-dependencies]
# criterion = '0.3.4'
criterion = { version = '0.3.4', features=['html_reports'] }
# cargo-criterion = "1.0.1"

[[bench]]
name = "carpet_benchmark"
harness = false
